--- a/v2/Cardio/css/cardio.css
+++ b/v2/Cardio/css/cardio.css
@@ -8,6 +8,17 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.image.avatar {
+	border-radius: 100%;
+	overflow: hidden;
+}
+
+.image.avatar img {
+	border-radius: 100%;
+	display: block;
+	width: 40%;
+}
+
 .parallax {
 	position: absolute;
 	overflow: hidden;
@@ -154,9 +165,13 @@ header .typed-cursor {
 
 a {
 	text-decoration: none;
-	color: #00a8ff;
+	color: white;
 	-webkit-transition: all 0.3s ease;
 	transition: all 0.3s ease;
+}
+
+.link {
+	text-decoration:underline;
 }
 /* Navigation Bar ( Navbar ) */
 
@@ -320,30 +335,72 @@ section {
 	background-position: 0% 0%;
 }
 
-.intro-table-first {
-	background-image: url('../img/table-1.jpg');
+.intro-table-hover-1 {
+	-webkit-transition: background-image 0.3s ease, background-position 0.3s;
+	transition: background-image 0.3s ease, background-position 0.3s;
+	background-image: url('../img/ucp.png');
+}
+
+.intro-table-hover-1 h4 {
+	-webkit-transform: translateY(90px);
+	transform: translateY(90px);
+	-webkit-transition: -webkit-transform 0.3s;
+	transition: transform 0.3s;
+}
+
+.intro-table-hover-1:hover {
+	background-image: url('../img/ucp.png');
+	background-position: 50% 50%;
+}
+
+.intro-table-hover-1 .expand {
+	margin: 30px;
+	margin-top: 120px;
+	opacity: 0;
+	-webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
+	transition: transform 0.3s ease, opacity 0.3s;
+	-webkit-transform: scale(1);
+	-ms-transform: scale(1);
+	transform: scale(1);
+}
+
+.intro-table-hover-1:hover h4 {
+	-webkit-transform: translateY(0);
+	transform: translateY(0);
+}
+
+.intro-table-hover-1:hover .expand {
+	opacity: 1;
+	-webkit-transform: scale(1);
+	-ms-transform: scale(1);
+	transform: scale(1);
+}
+
+.intro-table-hover-1 .hide-hover {
+	-webkit-transition: opacity 0.3s ease;
+	transition: opacity 0.3s ease;
+}
+
+.intro-table-hover-1:hover .hide-hover {
+	opacity: 0;
 }
 
 .intro-table-hover {
 	-webkit-transition: background-image 0.3s ease, background-position 0.3s;
 	transition: background-image 0.3s ease, background-position 0.3s;
-	background-image: url('../img/table-2.jpg');
+	background-image: url('../img/sfsu.png');
 }
 
 .intro-table-hover h4 {
-	-webkit-transform: translateY(170px);
-	transform: translateY(170px);
+	-webkit-transform: translateY(100px);
+	transform: translateY(100px);
 	-webkit-transition: -webkit-transform 0.3s;
 	transition: transform 0.3s;
 }
 
 .intro-table-hover:hover {
-	background-image: url('../img/table-2-hover.jpg');
+	background-image: url('../img/sfsu.png');
 	background-position: 50% 50%;
-}
-
-.intro-table-third {
-	background-image: url('../img/table-3.jpg');
 }
 
 .intro-table-hover .expand {
@@ -352,9 +409,9 @@ section {
 	opacity: 0;
 	-webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
 	transition: transform 0.3s ease, opacity 0.3s;
-	-webkit-transform: scale(0.6);
-	-ms-transform: scale(0.6);
-	transform: scale(0.6);
+	-webkit-transform: scale(1);
+	-ms-transform: scale(1);
+	transform: scale(1);
 }
 
 .intro-table-hover:hover h4 {
@@ -376,6 +433,10 @@ section {
 
 .intro-table-hover:hover .hide-hover {
 	opacity: 0;
+}
+
+.intro-table-third {
+	background-image: url('../img/mooc.png');
 }
 
 .intro-tables .intro-table {
