--- a/v2/css/cardio.css
+++ b/v2/css/cardio.css
@@ -8,6 +8,15 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.space {
+	padding: 10px 50px 10px 50px;
+}
+
+.space_light {
+	padding: 0px 20px 0px 20px;
+}
+
+
 .image.avatar {
 	border-radius: 100%;
 	overflow: hidden;
