--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,44 @@
+/* style.css */
+
+/* Réinitialisation globale */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* @font-face {
+  font-family: 'Product Sans';
+  src: url('fonts/ProductSans-Regular.ttf') format('truetype'); 
+  font-weight: normal;
+  font-style: normal;
+} */
+
+body, html {
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif; /* Applique la police Roboto à tout le corps */
+  color: #333; /* Optionnel : couleur de texte par défaut */
+}
+
+h1, h2, p, button, .personal-info, .carousel-content, .console-input {
+  font-family: 'Montserrat', sans-serif; /* Assure l'application de la police aux éléments spécifiques */
+}
+
+a {
+  color: inherit; /* Garde la couleur du texte parent par défaut */
+  text-decoration: underline;
+}
+
+a:hover,
+a:focus {
+  color: #b7a700; /* Couleur de survol (bleu clair, à ajuster selon vos besoins) */
+  text-decoration: none; /* Supprime le soulignement */
+}
+
 /* Style de la section d'accueil */
 .hero-section {
   position: relative;
@@ -9,28 +50,242 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  display: block;
 }
 
 .hero-overlay {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100%; /* L'overlay couvre toute l'image */
   height: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start; /* Aligne le bloc de texte à gauche */
+  align-items: flex-start; /* Aligne le bloc vers le haut */
+  padding-top: 15%; /* Ajuste cette valeur pour contrôler la hauteur */
   background: rgba(0, 0, 0, 0.5);
   color: white;
   font-size: 2.5rem;
 }
 
-/* Style des sections */
-section {
-  padding: 50px;
+.content-wrapper {
+  display: flex;
+  flex-direction: column; /* Aligne les enfants verticalement */
+  width: 50%; /* Garde la largeur de 50% pour l'ensemble */
+}
+
+.text-container {
+  width: 100%; /* Limite la largeur du bloc de texte à 50% de l'overlay */
+  margin-left: 0; /* Positionne le bloc à gauche */
+  display: flex;
+  justify-content: center; /* Centre le texte à l'intérieur du bloc */
+  align-items: center; /* Centre le texte verticalement */
+  text-align: center;
+}
+
+.console-container {
+  width: 100%; 
+}
+
+.console-input {
+  position: absolute;
+  bottom: 10%;
+  left: -15%;
+  width: 30%; /* Prend toute la largeur du conteneur */
+  background-color: #000; /* Fond noir */
+  color: #fff; /* Texte blanc */
+  border: none;
+  padding: 10px;
+  font-family: 'Courier New', Courier, monospace; /* Police de type console */
+  font-size: 1rem;
+  outline: none; /* Supprime le contour bleu par défaut */
+  display: block; /* Assure que l'élément prend toute la largeur du parent */
+  margin-left: 25%;
+}
+
+.text-container,
+.console-container{
+  width: 100%; /* Prend toute la largeur de l'ensemble */
+}
+
+.scroll-arrow {
+  position: absolute; /* La flèche est positionnée par rapport à .hero-section */
+  bottom: 30px; /* Ajuste la position verticale */
+  left: 50%; /* Centre horizontalement */
+  transform: translateX(-50%);
+  font-size: 2rem;
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+  animation: bounce 2s infinite;
+}
+
+/* Animation pour un effet de rebond */
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0) translateX(-50%);
+  }
+  40% {
+      transform: translateY(-3px) translateX(-50%);
+  }
+  60% {
+      transform: translateY(-1px) translateX(-50%);
+  }
+  100% {
+      transform: translateY(0) translateX(-50%); /* Retour à la position de départ */
+  }
+}
+
+.scroll-arrow svg {
+  animation-delay: 5s;
+  animation: bounce 2s infinite;
+  cursor: pointer;
+}
+
+.scroll-arrow:hover svg path {
+  stroke: #bcb9a8; /* Change la couleur au survol */
+}
+
+
+.personal-info {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column; /* Aligne le contenu de haut en bas */
+  align-items: center;
+  padding: 50px 0; /* Ajuste l'espacement vertical */
   background-color: #f4f4f4;
 }
 
-section h2 {
-  margin-bottom: 20px;
+.personal-info h2 {
+  font-size: 2rem;
+  margin-bottom: 100px;
+  color: #222;
+  text-align: center; /* Centre le titre */
+}
+
+.info-container {
+  display: flex;
+  width: 70%; /* Limite la largeur totale à 70% */
+  gap: 20px;
+  justify-content: center; /* Centre les éléments horizontalement */
+}
+
+.photo-section,
+.carousel-section {
+  flex: 1; /* Les deux sections prennent la même largeur */
+}
+
+.profile-photo {
+  max-width: 100%;
+  height: 500px; /* Ajuste la hauteur pour contrôler la partie visible */
+  object-fit: cover; /* Coupe l'image pour qu'elle remplisse l'espace */
+  object-position: center; /* Centre l'image horizontalement et verticalement */
+  border-radius: 10px; /* Optionnel : pour arrondir les coins */
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+}
+
+.carousel-section {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.carousel-content {
+  position: relative;
+  overflow: hidden;
+  height: 350px; /* Ajuste la hauteur selon tes besoins */
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.carousel-item {
+  display: none;
+}
+
+.carousel-item.active {
+  display: block;
+}
+
+.carousel-buttons {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.carousel-buttons button {
+  margin: 0 5px;
+  padding: 10px;
+  border: none;
+  background-color: #ddd;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+}
+
+.carousel-buttons button:hover {
+  background-color: #bbb;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.panel-content {
+  width: 80%; /* Limite la largeur à 70% du parent */
+  margin: 20px auto; /* Centre le contenu et ajoute des marges en haut et en bas */
+  padding: 20px; /* Optionnel : ajoute du padding interne */
+}
+
+.panel-content h3 {
+  margin-bottom: 20px; /* Espacement sous le titre */
+}
+
+.panel-content p {
+  margin-bottom: 15px; /* Espacement entre les paragraphes */
+}
+
+.panel-content .links {
+  display: flex;
+  justify-content: center; /* Centre les liens horizontalement */
+  margin-top: 50px; /* Ajoute un espace au-dessus des liens */
+  gap: 15px; /* Espace entre les liens */
+  flex-wrap: wrap; /* Permet le retour à la ligne si nécessaire */
+}
+
+.panel-content .links a {
+  color: inherit; /* Couleur des liens */
+  text-decoration: underline; /* Souligne les liens */
+  font-size: 1rem; /* Taille de la police */
+  transition: color 0.3s; /* Transition pour l'effet de survol */
+}
+
+.panel-content .links a:hover {
+  color: #b7a700; /* Couleur au survol */
+}
+
+.panel-content-education {
+  width: 95%; /* Limite la largeur à 70% du parent */
+  margin: 0 auto; /* Centre le contenu */
+  display: flex;
+  flex-direction: column;
+  gap: 20px; /* Espace entre chaque entrée */
+}
+
+.education-entry {
+  display: flex;
+  align-items: center;
+  gap: 15px; /* Espace entre l'image et la description */
+}
+
+.education-logo {
+  width: 90px; /* Ajuste la taille de l'image */
+  height: 90px;
+  border-radius: 50%; /* Rend l'image circulaire */
+  object-fit: cover;
+}
+
+.education-description {
+  flex: 1; /* La description prend le reste de l'espace disponible */
+  font-size: 1rem;
 }
