--- a/css/style.css
+++ b/css/style.css
@@ -679,6 +679,13 @@ a {
   text-decoration: underline; /* Add underline on hover */
 }
 
+.project-year {
+  font-size: 1.1rem;
+  font-weight: bold;
+  color: #555;
+  text-align: center;
+  margin-bottom: 10px; /* Espacement en dessous de l'année */
+}
 
 .close-button {
   position: absolute;
